[gd_scene load_steps=2 format=3 uid="uid://cwf256pqbkc0i"]

[ext_resource type="Script" uid="uid://cbs5tmaok3nua" path="res://SQLController.gd" id="1_vbtlf"]

[node name="SQL" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbtlf")

[node name="InsertData" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 128.0
text = "Вставить данные"

[node name="CreateTeble" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 192.0
offset_right = 1088.0
offset_bottom = 256.0
text = "Создать таблицу"

[node name="SelectData" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 192.0
offset_right = 320.0
offset_bottom = 256.0
text = "Выбрать данные"

[node name="UpdateData" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 320.0
offset_right = 320.0
offset_bottom = 384.0
text = "Обновить данные"

[node name="DeleteData" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 512.0
text = "Удалить данные"

[node name="CustomSelect" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 576.0
offset_right = 320.0
offset_bottom = 640.0
text = "Кастомный выбор"

[node name="IdField" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 72.0
offset_right = 576.0
offset_bottom = 119.0
text = "Поле: Id"

[node name="SaveField" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 200.0
offset_right = 576.0
offset_bottom = 247.0
text = "Поле: Save"

[node name="IdTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 584.0
offset_top = 72.0
offset_right = 768.0
offset_bottom = 119.0

[node name="SaveTextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 584.0
offset_top = 200.0
offset_right = 768.0
offset_bottom = 247.0

[connection signal="pressed" from="InsertData" to="." method="_on_insert_data_pressed"]
[connection signal="pressed" from="CreateTeble" to="." method="_on_create_teble_pressed"]
[connection signal="pressed" from="SelectData" to="." method="_on_select_data_pressed"]
[connection signal="pressed" from="UpdateData" to="." method="_on_update_data_pressed"]
[connection signal="pressed" from="DeleteData" to="." method="_on_delete_data_pressed"]
[connection signal="pressed" from="CustomSelect" to="." method="_on_custom_select_pressed"]
